# resume-ranking-project

./: .gitignore  README.md  package-lock.json
app/: api_routes.py  app.py  config.py  db.py  file_processing.py  helpers.py  index.html  main.py  pyproject.toml  utils.py
app/model_pipeline/: clsf.py  embed.py  match.py  ner.py  objdet.py  ocr.py  pyproject.toml
app/model_pipeline/models/: clsf_model.py  common.py  detect_model.py  embed_model.py  experimental.py  ner_model.py  ocr_model.py  yolo.py
app/model_pipeline/utils/: augmentations.py  dataloaders.py  downloads.py  files.py  general.py  metrics.py  params.py  plots.py  re_extract.py  torch_utils.py
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/: Banner.jsx  CreateJob.jsx  DetectionStep.jsx  Dropzone.jsx  Footer.jsx  Gallery.jsx  GalleryCard.jsx  MatchOperation.jsx  MatchResults.jsx  Navbar.jsx  OcrStep.jsx  Presentation.jsx  ResumeExtraction.jsx  ResumeResults.jsx  Tiptap.jsx
client/src/views/: MainPage.jsx  MatchPage.jsx  MatchResultsPage.jsx  ResumeResultsPage.jsx  ResumesPage.jsx
db/: Dockerfile  init.sql
model-pipeline/: main.py  pyproject.toml
model-pipeline/models/: clsf_model.py  common.py  detect_model.py  ner_model.py  params.py
model-pipeline/utils/: files.py  params.py  plots.py  re_extract.py
vite-project/: package-lock.json  package.json
vite-project/src/: App.css  App.jsx  main.jsx
vite-project/src/assets/css/: Dropzone.css  JobsPage.css  MainPage.css
vite-project/src/components/: Banner.jsx  CreateJob.jsx  Dropzone.jsx  FileForm.jsx  Footer.jsx  Gallery.jsx  GalleryCard.jsx  MatchOperation.jsx  Navbar.jsx  Presentation.jsx
vite-project/src/views/: JobsPage.jsx  MainPage.jsx  MatchPage.jsx  ResumesPage.jsx
