[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["batuyazici <92368839+batuyazici@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
pdf2image = "^1.17.0"
comtypes = "^1.4.1"
sentence-transformers = "^2.7.0"
pgvector = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
