[tool.poetry]
name = "model-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.3.0+cu118", source = "torch"}
torchvision = {version = "^0.18.0+cu118", source = "torch"}
torchaudio = {version = "^2.3.0+cu118", source = "torch"}
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
requests = "^2.31.0"
ipython = "^8.24.0"
psutil = "^5.9.8"
pyyaml = "^6.0.1"
tqdm = "^4.66.2"
setuptools = "^69.5.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
easyocr = "^1.7.1"
transformers = "^4.40.1"
gliner = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"